--- a/package.json
+++ b/package.json
@@ -15,40 +15,45 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@google/genai": "^1.4.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@supabase/supabase-js": "^2.49.3",
-    "expo": "~52.0.46",
-    "expo-font": "~13.0.4",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.20",
-    "expo-splash-screen": "^0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.9",
-    "expo-web-browser": "~14.0.2",
+    "@supabase/realtime-js": "^2.11.8-next.1",
+    "@supabase/supabase-js": "^2.49.5-next.1",
+    "expo": "^53.0.11",
+    "expo-font": "~13.3.1",
+    "expo-linking": "~7.1.5",
+    "expo-location": "~18.1.5",
+    "expo-router": "~5.0.7",
+    "expo-splash-screen": "^0.30.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.8",
+    "expo-web-browser": "~14.1.6",
+    "http": "^0.0.1-security",
     "nativewind": "^4.1.23",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "^0.76.9",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "^0.79.3",
     "react-native-config": "^1.5.5",
+    "react-native-gifted-chat": "^2.8.1",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.13",
-    "tailwindcss": "^3.4.17",
-    "expo-location": "~18.0.10"
+    "react-native-web": "~0.20.0",
+    "stream": "^0.0.3",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "~53.0.7",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "react-test-renderer": "18.3.1",
-    "typescript": "~5.3.3"
+    "react-test-renderer": "19.0.0",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
